# infra-controller

./: AGENTS.md  Cargo.toml  Makefile  Makefile.toml  STYLE_GUIDE.md  devspace.yaml
.github/workflows/: build-boot-artifacts.yml  ci.yaml  docker-build.yml  fern-docs-preview-build.yml  promotion.yaml  rest-build-push-docker.yml  rest-build-push-service.yml  rest-ci.yml  rest-helm-workflows.yml  rest-lint-and-test.yml  rest-prepare-build-info.yml
crates/agent/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-integration-tests/: Cargo.toml
crates/api-test-helper/: Cargo.toml
crates/api-web/: Cargo.toml
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml
crates/component-manager/: Cargo.toml
crates/dns/: Cargo.toml
crates/dpa/: Cargo.toml
crates/dpa-manager/: Cargo.toml
crates/dsx-exchange-consumer/: Cargo.toml
crates/firmware/: Cargo.toml
crates/fmds/: Cargo.toml
crates/health/: Cargo.toml
crates/host-support/: Cargo.toml
crates/instrument/: Cargo.toml
crates/instrument/src/: lib.rs  log_events.rs  testing.rs
crates/instrument/tests/: matrix.rs
crates/machine-a-tron/: Dockerfile
crates/metrics-endpoint/: Cargo.toml
crates/nvlink-manager/: Cargo.toml
crates/observability-schema/: Cargo.toml
crates/rpc/: build.rs
crates/site-explorer/: Cargo.toml
crates/test-support/: Cargo.toml
crates/xtask/: Cargo.toml
dev/: Makefile.core
dev/docker-env/: mat.toml
dev/mac-local-dev/: README.md  run-nico-api.sh
dev/webdev-env/: run-env.sh
docs/: faq.md  glossary.md  index.yml
docs/architecture/: health_aggregation.md  overview.md
docs/configuration/: component-manager-rms.md  network-isolation.md  tenant_management.md
helm/: README.md
helm-prereqs/: README.md  preflight.sh  values.yaml
openapi/: spec.yaml
rest-api/: AGENTS.md  Makefile
(+778 files in other folders)
