#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-instrument"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
carbide-instrument-macros = { path = "../instrument-macros" }
dashmap = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# test-support only
ctor = { workspace = true, optional = true }
opentelemetry-prometheus = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

[features]
# Capture helpers for asserting that an event logged and/or metered in tests.
test-support = [
  "dep:ctor",
  "dep:opentelemetry-prometheus",
  "dep:opentelemetry_sdk",
  "dep:prometheus",
]

[dev-dependencies]
carbide-instrument = { path = ".", features = ["test-support"] }
carbide-test-support = { path = "../test-support" }
futures-util = { workspace = true }
logfmt = { path = "../logfmt" }

[lints]
workspace = true
